@@ -1,3 +1,5 @@
+$NetBSD: COPYRIGHT,v 1.4 1995/02/27 13:28:12 cgd Exp $
+
 Copyright 1992, 1993, 1994 Henry Spencer.  All rights reserved.
 This software is not subject to any license of the American Telephone
 and Telegraph Company or of the Regents of the University of California.
