@@ -1,3 +1,4 @@
+#	$NetBSD: Makefile.inc,v 1.5 1995/02/27 13:28:19 cgd Exp $
 #	@(#)Makefile.inc	8.1 (Berkeley) 6/4/93
 
 # regex sources
